--- a/module/Contato/view/layout/layout.phtml
+++ b/module/Contato/view/layout/layout.phtml
@@ -37,8 +37,8 @@
         <div class="container">
             <div class="header">
                 <ul class="nav nav-pills pull-right">
-                    <li class="active"><a href="#">Início</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li class="active"><a href="<?php echo $this->url('home', array( 'action' => 'home' )); ?>  ">Início</a></li>
+                    <li><a href="<?php echo $this->url('sobre', array( 'action' => 'sobre' )); ?>">Sobre</a></li>
                 </ul>
                 <h3 class="text-muted"><?php echo $NAME_APPLICATION; ?></h3>
             </div>
