--- a/module/Contato/view/contato/home/index.phtml
+++ b/module/Contato/view/contato/home/index.phtml
@@ -14,7 +14,7 @@
             <li><a href="#">100</a></li>
         </ul>
     </div>
- 
+
     <form class="form-inline pull-right" role="form">
         <div class="form-group">
             <label class="sr-only" for="localizar">Buscar...</label>
@@ -23,40 +23,40 @@
         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
     </form>
 </div>
- 
+
 <br />
- 
+
 <div class="corpo-table">
     <table class="table table-striped table-bordered table-hover">
         <thead>
-            <tr>
-                <th>#</th>
-                <th>Nome</th>
-                <th>Tel. Principal</th>
-                <th>Tel. Qua.</th>
-                <th>Data Criação</th>  
-                <th>Ação</th>  
-            </tr>
+        <tr>
+            <th>#</th>
+            <th>Nome</th>
+            <th>Tel. Principal</th>
+            <th>Tel. Qua.</th>
+            <th>Data Criação</th>
+            <th>Ação</th>
+        </tr>
         </thead>
- 
+
         <tbody>
-            <?php for ($i = 1; $i <= 5; $i++): ?>
-                <tr>
-                    <td><?php echo $i; ?></td>
-                    <td>Fortaleza Ceará Brasil</td>
-                    <td>(085)85858585</td>
-                    <td class="text-center">2</td>
-                    <td><?php echo $this->dateFormat(new DateTime(), IntlDateFormatter::SHORT); ?></td>
-                    <td>
-                        <a class="btn btn-xs btn-info" title="Visualizar" href="<?php echo $this->url('contatos', array("action" => "detalhes", "id" => $i,)); ?>"><span class="glyphicon glyphicon-new-window"></span></a>
-                        <a class="btn btn-xs btn-warning" title="Editar" href="<?php echo $this->url('contatos', array("action" => "editar", "id" => $i,)); ?>"><span class="glyphicon glyphicon-edit"></span></a>
-                        <a class="btn btn-xs btn-danger" title="Deletar" href="<?php echo $this->url('contatos', array("action" => "deletar", "id" => $i,)); ?>"><span class="glyphicon glyphicon-floppy-remove"></span></a>
-                    </td>
-                </tr>
-            <?php endfor; ?>
+        <?php foreach ($this->contatos as $contato) : ?>
+            <tr>
+                <td><?php echo $this->escapeHtml($contato->id); ?></td>
+                <td><?php echo $this->escapeHtml($contato->nome); ?></td>
+                <td><?php echo $this->escapeHtml($contato->telefone_principal); ?></td>
+                <td class="text-center">2</td>
+                <td><?php echo $this->escapeHtml($contato->data_criacao); ?></td>
+                <td>
+                    <a class="btn btn-xs btn-info" title="Visualizar" href="<?php echo $this->url('contatos', array("action" => "detalhes", "id" => $contato->id,)); ?>"><span class="glyphicon glyphicon-new-window"></span></a>
+                    <a class="btn btn-xs btn-warning" title="Editar" href="<?php echo $this->url('contatos', array("action" => "editar", "id" => $contato->id,)); ?>"><span class="glyphicon glyphicon-edit"></span></a>
+                    <a class="btn btn-xs btn-danger" title="Deletar" href="<?php echo $this->url('contatos', array("action" => "deletar", "id" => $contato->id,)); ?>"><span class="glyphicon glyphicon-floppy-remove"></span></a>
+                </td>
+            </tr>
+        <?php endforeach; ?>
         </tbody>
     </table>
- 
+
     <ul class="pagination pull-right">
         <li><a href="#">Anterior</a></li>
         <li class="active"><a href="#">1</a></li>
